--- a/main.1.css
+++ b/main.1.css
@@ -64,7 +64,7 @@ html, body {
   font-family: "Lucida Grande", "Lucida Sans Unicode";
   height: calc(100vh - 3px);
   width: 100vw;
-  background: url('/1028.png');
+  background: url('/Users/chrisk/Work/Portfolio/1028.png');
 }
 
 h1 {
@@ -97,30 +97,6 @@ p {
   padding: 15px;
 }
 
-.fa-linkedin {
-  color: #0077b5;
-}
-
-.fa-linkedin:visited {
-  color: #0077b5;
-}
-
-.fa-github-square {
-  color: #24292e;
-}
-
-.fa-github-square:visited {
-  color: #24292e;
-}
-
-.fa-twitter {
-  color: #1da1f2;
-}
-
-.fa-twitter:visited {
-  color: #1da1f2;
-}
-
 .container {
   height: 100vh;
   width: 100vh;
@@ -147,7 +123,7 @@ p {
 }
 
 .pic {
-  background: url('/s2cU5%a%RQeZYPfpyisLnQ_thumb_7d0.jpg') no-repeat;
+  background: url('/Users/chrisk/Work/Portfolio/s2cU5%a%RQeZYPfpyisLnQ_thumb_7d0.jpg') no-repeat;
   background-size: 500px 500px;
   width: 450px;
   height: 450px;
