--- a/main.css
+++ b/main.css
@@ -97,6 +97,33 @@ p {
   padding: 15px;
 }
 
+.socials {
+  display: flex;
+  flex-direction: row;
+}
+
+.resume {
+  font-size: 12px;
+  height: 86px;
+  width: 79px;
+  padding: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.resume a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid black;
+  height: 50px;
+  width: 49px;
+  border-radius: 10px;
+  text-decoration: none;
+  color: black;
+}
+
 .fa-linkedin {
   color: #0077b5;
 }
@@ -147,7 +174,7 @@ p {
 }
 
 .pic {
-  background: url('/s2cU5%a%RQeZYPfpyisLnQ_thumb_7d0.jpg') no-repeat;
+  background: url('/pic.jpg') no-repeat;
   background-size: 500px 500px;
   width: 450px;
   height: 450px;
@@ -176,6 +203,10 @@ p {
   transform: translate(-50%, -2px);
   border-radius: 50%;
   transition: 2s all;
+}
+
+.pic:hover {
+  cursor: pointer;
 }
 
 .pic:hover:after {
@@ -230,6 +261,7 @@ p {
   display: flex;
   flex-direction: column;
   transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
   transition: .5s all ease;
 }
 
@@ -239,7 +271,11 @@ p {
   height: 50%;
 }
 
-.project-section:hover .selected, .project-section:active .selected{
+.project-section:hover .selected, .flip {
+  -moz-transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
   transform: rotateY(180deg);
 }
 
@@ -247,6 +283,7 @@ p {
   position: absolute;
   height: 100%;
   width: 100%;
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   background: rgb(255, 255, 255);
   border-radius: 10px;
@@ -260,6 +297,7 @@ p {
   padding: 20px;
   height: 100%;
   width: 100%;
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   background: rgb(241, 241, 241);
   border-radius: 10px;
@@ -450,6 +488,7 @@ input:focus {
       ". contact contact .";
   }
   .pic {
+    background: url('/pic.jpg') no-repeat;
     background-size: 320px 320px;
     width: 320px;
     height: 320px;
@@ -479,6 +518,10 @@ input:focus {
     width: 0px;
     height: 0px;
   }
+  .project p {
+    font-size: 20px;
+    letter-spacing: .75px;
+  }
 }
 
 @media only screen and (max-width: 767px) {
@@ -495,6 +538,7 @@ input:focus {
       ". contact .";
   }
   .pic {
+    background: url('/pic.jpg') no-repeat;
     background-size: 320px 320px;
     width: 320px;
     height: 320px;
@@ -530,6 +574,10 @@ input:focus {
   .email-link {
     color: rgb(99, 104, 170);
   }
+  .project p {
+    font-size: 18px;
+    letter-spacing: .75px;
+  }
 }
 
 @media only screen and (max-width: 470px) {
@@ -546,6 +594,7 @@ input:focus {
       ". contact .";
   }
   .pic {
+    background: url('/pic.jpg') no-repeat;
     background-size: 300px 300px;
     width: 300px;
     height: 300px;
@@ -583,5 +632,9 @@ input:focus {
   .pic::after {
     width: 0px;
     height: 0px;
+  }
+  .project p {
+    font-size: 14px;
+    letter-spacing: .5px;
   }
 }
